- fix news block height on mobile

--- a/src/scss/components/_blocks.scss
+++ b/src/scss/components/_blocks.scss
@@ -155,8 +155,8 @@
 #block-news{
   display: flex;
   align-items: center;
-  height: 100vh;
-  posi
+  min-height: 100vh;
+
   ul{
     justify-content: center;
   }
